--- a/files/home/styles.css
+++ b/files/home/styles.css
@@ -3,8 +3,8 @@
   background-color:rgba(102, 102, 102, 1);
   background-image:none;
   position:relative;
-  left:-146px;
-  width:484px;
+  left:-0px;
+  width:498px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -13,111 +13,42 @@
   position:absolute;
   z-index:0;
 }
-#u0_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:484px;
-  height:420px;
-}
 #u0 {
   border-width:0px;
   position:absolute;
-  left:146px;
-  top:124px;
-  width:484px;
-  height:420px;
+  left:0px;
+  top:58px;
+  width:494px;
+  height:636px;
 }
-#u1 {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:202px;
-  width:480px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u2_div {
-  border-width:0px;
+#u0_input {
+  border-width:2px;
   position:absolute;
   left:0px;
   top:0px;
-  width:235px;
-  height:34px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Verdana';
-  font-weight:400;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-}
-#u2 {
-  border-width:0px;
-  position:absolute;
-  left:271px;
-  top:64px;
-  width:235px;
-  height:34px;
-  font-family:'Verdana';
-  font-weight:400;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-}
-#u3 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:235px;
-  white-space:nowrap;
+  width:494px;
+  height:636px;
+  overflow:auto;
 }
 body.a {  background-color:rgba(102, 102, 102, 1);
   background-image:none;
   position:relative;
-  left:-147px;
-  width:484px;
+  left:-0px;
+  width:762px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
 }
 #u0.a {
-  left:147px;
+  top:0px;
+  width:758px;
+  height:975px;
 }
-#u0_img.a {
-}
-#u1.a {
-}
-#u2.a {
-  left:272px;
-  top:50px;
-}
-#u2_div.a {
+#u0_input.a {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:235px;
-  height:34px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Verdana';
-  font-weight:400;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-}
-#u3.a {
+  width:758px;
+  height:975px;
 }
