--- a/files/index/styles.css
+++ b/files/index/styles.css
@@ -32,33 +32,33 @@
 }
 body.a {  background-color:rgba(102, 102, 102, 1);
   background-image:none;
-  position:relative;
-  left:-0px;
-  width:486px;
-  margin-left:auto;
-  margin-right:auto;
+  position:static;
+  left:auto;
+  width:765px;
+  margin-left:0;
+  margin-right:0;
   text-align:left;
 }
 #u0.a {
   top:0px;
-  width:482px;
-  height:621px;
+  width:761px;
+  height:980px;
 }
 #u0_input.a {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:482px;
-  height:621px;
+  width:761px;
+  height:980px;
 }
 body.b {  background-color:rgba(102, 102, 102, 1);
   background-image:none;
-  position:relative;
-  left:-0px;
+  position:static;
+  left:auto;
   width:254px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:0;
+  margin-right:0;
   text-align:left;
 }
 #u0.b {
@@ -76,11 +76,11 @@ body.b {  background-color:rgba(102, 102, 102, 1);
 }
 body.c {  background-color:rgba(102, 102, 102, 1);
   background-image:none;
-  position:relative;
-  left:-0px;
+  position:static;
+  left:auto;
   width:392px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:0;
+  margin-right:0;
   text-align:left;
 }
 #u0.c {
